--- a/Pages/index.html
+++ b/Pages/index.html
@@ -13,6 +13,7 @@
 
     <!-- Le styles -->
     <link href="../styles/bootstrap.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Telex' rel='stylesheet' type='text/css'>
     <style type="text/css">
       body {
         padding-top: 60px;
