--- a/Pages/index.html
+++ b/Pages/index.html
@@ -37,6 +37,7 @@
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="events.html">Events</a></li>
+            <li><a href="photos.html">Photos</a></li>
             <li><a href="contact.html">Contact & Join</a></li>
           </ul>
         </div>
