create photos page

--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>HVA Events</title>
+    <title>HVA Contact</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -57,10 +57,11 @@
       Cambridge, MA 02138<br><br>
 
       <h2>Join Us!</h2><br>
-      Join our <a href = "">official mailing list</a> for announcements & upcoming events.<br>
+      Join our <a href = "https://lists.hcs.harvard.edu/mailman/listinfo/hva-list">official mailing list</a> for announcements & upcoming events.<br>
       Join our <a href = "">open list</a> for Vietnamese campus discussions.<br>
       Join the Harvard Vietnamese official <a href = "https://www.facebook.com/groups/2200047691/">Facebook group</a>.
 
+</div>
       <!--
       Questions? Comments? We would like to find out who is accessing the HVA homepage and would appreciate it if you would take a few moments to complete the form below. If you would like us to add anything, especially a link, please feel free to mention that (and write the URL) in the comment box below.<br><br>
 <iframe src="https://docs.google.com/spreadsheet/embeddedform?formkey=dHEweVJJdGNlTl9xM2ZlSi1CQnp1Y0E6MQ" width="760" height="846" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
