--- a/Pages/about.html
+++ b/Pages/about.html
@@ -13,6 +13,7 @@
 
     <!-- Le styles -->
     <link href="../styles/bootstrap.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Telex' rel='stylesheet' type='text/css'>
     <style type="text/css">
       body {
         padding-top: 60px;
@@ -36,6 +37,7 @@
             <li><a href="index.html">Home</a></li>
             <li class="active"><a href="about.html">About</a></li>
             <li><a href="events.html">Events</a></li>
+            <li><a href="photos.html">Photos</a></li>
             <li><a href="contact.html">Contact & Join</a></li>
           </ul>
         </div>
@@ -46,28 +48,57 @@
 
       <!-- Main hero unit for a primary marketing message or call to action -->
       <div class="hero-unit">
-        <h1>Harvard Vietnamese Association</h1>
-        <p>We are the coolest club on campus. You know it.</p>
-        <p><a class="btn primary large">Learn more &raquo;</a></p>
-      </div>
+      <div class ="row">
+          <div class="span10">
+            <h2>History &amp Purpose</h2>
+            The Harvard Vietnamese Association (HVA) was founded in the early 1990's. 
+            Initially, HVA was an outlet for Vietnamese students to socialize with one another and to learn more about 
+            Vietnamese culture. In 1993, the board unanimously voted to rewrite the constitution to allow for more flexibility. 
+            The President at that time, Dat I. Tu '95, believed that the changes would "give the president greater responsibility." 
+            Tu also pointed out that the organization was "moving away from its traditional non political stance" so that 
+            "we can express our interests if we want to."  "In the past it was different, we had no voice on campus," Tu said. 
+            <br />
+            Over the years, HVA has continued to promote culture, community, and educational/political awareness at Harvard. 
+            It has become a vibrant voice on campus for Vietnamese and Vietnamese Americans and maintains a strong dedication to 
+            the needs of the greater Boston community. 
+            <br />
+            <h2>Culture</h2>
+            In 1992, the board promoted Vietnamese culture through food festivals. Today, HVA's annual Southeast Asian 
+            night is a cultural extravaganza which sells out each year. Additionally, the Harvard Vietnamese Dance & Drama 
+            Troupe (HVDT) was created as an opportunity for students to embrace Vietnamese culture through music and dance. 
+            In the past, HVA has also invited numerous artists to speak and perform on campus. In 2005, the board invited the 
+            poet-in-exile, Du Tu Le. In 2004, the board invited composer Pham Duy.
+            <br />
+            <h2>Community</h2>
+            HVA maintains a strong commitment to building a warm community amongst its members. 
+            We are known on campus for our friendliness and are often seen as a "family." To promote cooperation and bonding, 
+            HVA hosts two annual study breaks each year - the Freshman study break and the Senior study break. 
+            These study breaks offer the new class a chance to get to know each other and offers the old class a chance to 
+            reminisce over a final project. Additionally, HVA  hosts an annual HVA retreat for all members to bond with one 
+            another. Past retreats have been picnicking at the Arnold Arboretum, apple picking in New Hampshire, and canoeing. 
+            We also have numerous social events throughout the year including movie nights, parties, and meals.
+            <br />
+            <h2>Politics</h2>
+            While HVA has no official political affiliation, we host political/educational events to foster a greater 
+            understanding of the issues facing the Vietnamese and Vietnamese American community. In 2003, the board hosted a 
+            film series to discuss the works of Tran Van Thuy, a documentary filmmaker whose films are highly controversial for 
+            their critique of the Vietnamese Communist regime post-1975. The Co-President at that time, Mai Anh Huynh '04, 
+            stated that this "series of screenings is the first of its kind sponsored by the HVA." In 2006, the board 
+            commemorated April 30th for the first time by displaying information posters in Loker Commons and the Science Center 
+            for two consecutive weeks.
+            <br />
+            <h2>Vision</h2>
+            In recent years, HVA has  modified its mission to incorporate Vietnamese American history and culture in addition 
+            to Vietnamese history and culture. We recognize the importance of understanding emerging narratives about the Vietnamese 
+            American experience and offer a means for the Harvard community to explore this culture. In 2005, the board hosted a film 
+            screening entitled, "Forging New Identities" where we viewed films such as Saigon, USA (2003) and speaker Quang Tran '05 
+            presented her senior thesis about the Vietnamese 1.5 generation.
+          </div>
+          <div class="span4">
+            <h3>Secondary content</h3>
+          </div>
+          </div>
 
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="span-one-third">
-          <h2>Welcome</h2>
-          <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div>
-        <div class="span-one-third">
-          <h2>News</h2>
-           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-       </div>
-        <div class="span-one-third">
-          <h2>Events</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div>
       </div>
 
       <footer>
