--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -58,7 +58,7 @@
 
       <h2>Join Us!</h2><br>
       Join our <a href = "https://lists.hcs.harvard.edu/mailman/listinfo/hva-list">official mailing list</a> for announcements & upcoming events.<br>
-      Join our <a href = "">open list</a> for Vietnamese campus discussions.<br>
+      Join our <a href = "https://lists.hcs.harvard.edu/mailman/listinfo/hva-board">open list</a> for Vietnamese campus discussions.<br>
       Join the Harvard Vietnamese official <a href = "https://www.facebook.com/groups/2200047691/">Facebook group</a>.
 
 </div>
