--- a/Pages/about.html
+++ b/Pages/about.html
@@ -130,6 +130,8 @@
 
       <footer>
         <p>&copy;2012 AHN & JCM</p>
+        <p>HVA is a student-run organization at Harvard College. <br />
+        The Harvard name and/or VERITAS shield are trademarks of the President and Fellows of Harvard College and are used by permission of Harvard University.</p>
       </footer>
 
     </div> <!-- /container -->
