--- a/Pages/events.html
+++ b/Pages/events.html
@@ -55,7 +55,10 @@
       <!-- Example row of columns -->
 
       <footer>
-        <p>&copy; AHN & JCM</p>
+        <p>&copy;2012 AHN & JCM </p>
+        <p>HVA is a student-run organization at Harvard College.<br /></p>
+        <p>The Harvard name and/or VERITAS shield are trademarks of the President and Fellows of Harvard College and are used by permission of Harvard University.</p>
+        <br />
       </footer>
 
     </div> <!-- /container -->
