--- a/Pages/index.html
+++ b/Pages/index.html
@@ -47,8 +47,9 @@
     <div class="container">
 
       <!-- Main hero unit for a primary marketing message or call to action -->
-      <div class="hero-unit">
-        <h1>Harvard Vietnamese Association</h1>
+      <div class="hero-unit" id ="mainphoto">
+        <h1>Harvard <br /> 
+        Vietnamese Association</h1>
         <p>Fostering CULTURE-COMMUNITY-AWARENESS</p>
         <p><a class="btn danger">Learn more &raquo;</a></p>
       </div>
@@ -68,7 +69,10 @@ The Harvard Vietnamese Association is dedicated to fostering an awareness of Vie
       </div>
 
       <footer>
-        <p>&copy;2012 AHN & JCM</p>
+        <p>&copy;2012 AHN & JCM </p>
+        <p>HVA is a student-run organization at Harvard College.<br /></p>
+        <p>The Harvard name and/or VERITAS shield are trademarks of the President and Fellows of Harvard College and are used by permission of Harvard University.</p>
+        <br />
       </footer>
 
     </div> <!-- /container -->
