--- a/Pages/photos.html
+++ b/Pages/photos.html
@@ -34,10 +34,10 @@
         <div class="container">
           <a class="brand" href="#">HVA</a>
           <ul class="nav">
-            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="events.html">Events</a></li>
-            <li><a href="photos.html">Photos</a></li>
+            <li class="active"><a href="photos.html">Photos</a></li>
             <li><a href="contact.html">Contact & Join</a></li>
           </ul>
         </div>
@@ -48,27 +48,16 @@
 
       <!-- Main hero unit for a primary marketing message or call to action -->
       <div class="hero-unit">
-        <h1>Harvard Vietnamese Association</h1>
-        <p>Fostering CULTURE-COMMUNITY-AWARENESS</p>
-        <p><a class="btn danger">Learn more &raquo;</a></p>
+        <p><embed class="center" type="application/x-shockwave-flash" src="https://picasaweb.google.com/s/c/bin/slideshow.swf" width="600" height="400" flashvars="host=picasaweb.google.com&hl=en_US&feat=flashalbum&RGB=0x000000&feed=https%3A%2F%2Fpicasaweb.google.com%2Fdata%2Ffeed%2Fapi%2Fuser%2F102010019576097628193%2Falbumid%2F5700305041656944625%3Falt%3Drss%26kind%3Dphoto%26authkey%3DGv1sRgCO24q5TitZ-HOA%26hl%3Den_US" pluginspage="http://www.macromedia.com/go/getflashplayer"></embed>
+        </p>
       </div>
 
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="span8">
-          <h2>Welcome to HVA</h2>
-The Harvard Vietnamese Association is dedicated to fostering an awareness of Vietnamese and Vietnamese American culture on campus and within the Greater Boston area. Now in our 15th year, we are a vital force on campus and continue to embrace and promote the interests of the Vietnamese and Vietnamese student body at Harvard.             
-          <p><a class="btn danger" href="about.html">View details &raquo;</a></p>
-        </div>
-        <div class="span8">
-          <h2>News and Events</h2>
-           <p>The site is currently under renovation, but we will be including information about events here. </p>
-          <p><a class="btn danger" href="events.html">View details &raquo;</a></p>
-       </div>
-      </div>
 
       <footer>
-        <p>&copy;2012 AHN & JCM</p>
+        <p>&copy;2012 AHN & JCM </p>
+        <p>HVA is a student-run organization at Harvard College.<br /></p>
+        <p>The Harvard name and/or VERITAS shield are trademarks of the President and Fellows of Harvard College and are used by permission of Harvard University.</p>
+        <br />
       </footer>
 
     </div> <!-- /container -->
