--- a/Pages/index.html
+++ b/Pages/index.html
@@ -32,7 +32,7 @@
     <div class="topbar">
       <div class="fill">
         <div class="container">
-          <a class="brand" href="#">HVA</a>
+          <a class="brand" href="index.html">HVA</a>
           <ul class="nav">
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
