--- a/Pages/photos.html
+++ b/Pages/photos.html
@@ -32,7 +32,7 @@
     <div class="topbar">
       <div class="fill">
         <div class="container">
-          <a class="brand" href="#">HVA</a>
+          <a class="brand" href="index.html">HVA</a>
           <ul class="nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
@@ -48,7 +48,8 @@
 
       <!-- Main hero unit for a primary marketing message or call to action -->
       <div class="hero-unit">
-        <p><embed class="center" type="application/x-shockwave-flash" src="https://picasaweb.google.com/s/c/bin/slideshow.swf" width="600" height="400" flashvars="host=picasaweb.google.com&hl=en_US&feat=flashalbum&RGB=0x000000&feed=https%3A%2F%2Fpicasaweb.google.com%2Fdata%2Ffeed%2Fapi%2Fuser%2F102010019576097628193%2Falbumid%2F5700305041656944625%3Falt%3Drss%26kind%3Dphoto%26authkey%3DGv1sRgCO24q5TitZ-HOA%26hl%3Den_US" pluginspage="http://www.macromedia.com/go/getflashplayer"></embed>
+        <p><center><embed type="application/x-shockwave-flash" src="https://picasaweb.google.com/s/c/bin/slideshow.swf" width="600" height="400" flashvars="host=picasaweb.google.com&hl=en_US&feat=flashalbum&RGB=0x000000&feed=https%3A%2F%2Fpicasaweb.google.com%2Fdata%2Ffeed%2Fapi%2Fuser%2F102010019576097628193%2Falbumid%2F5700305041656944625%3Falt%3Drss%26kind%3Dphoto%26authkey%3DGv1sRgCO24q5TitZ-HOA%26hl%3Den_US" pluginspage="http://www.macromedia.com/go/getflashplayer"></embed>
+        </center>
         </p>
       </div>
 
