--- a/Pages/about.html
+++ b/Pages/about.html
@@ -25,6 +25,8 @@
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
+
+    <script type = "text/javascript" src = "../script/tabs.js"></script>
   </head>
 
   <body>
@@ -32,7 +34,7 @@
     <div class="topbar">
       <div class="fill">
         <div class="container">
-          <a class="brand" href="#">HVA</a>
+          <a class="brand" href="index.html">HVA</a>
           <ul class="nav">
             <li><a href="index.html">Home</a></li>
             <li class="active"><a href="about.html">About</a></li>
@@ -48,69 +50,7 @@
 
       <!-- Main hero unit for a primary marketing message or call to action -->
       <div class="hero-unit">
-      <div class ="row">
-          
-          <!--<section id = "about">
-            <h2>History &amp Purpose</h2>
-            The Harvard Vietnamese Association (HVA) was founded in the early 1990's. 
-            Initially, HVA was an outlet for Vietnamese students to socialize with one another and to learn more about 
-            Vietnamese culture. In 1993, the board unanimously voted to rewrite the constitution to allow for more flexibility. 
-            The President at that time, Dat I. Tu '95, believed that the changes would "give the president greater responsibility." 
-            Tu also pointed out that the organization was "moving away from its traditional non political stance" so that 
-            "we can express our interests if we want to."  "In the past it was different, we had no voice on campus," Tu said. 
-            <br /><br />
-            Over the years, HVA has continued to promote culture, community, and educational/political awareness at Harvard. 
-            It has become a vibrant voice on campus for Vietnamese and Vietnamese Americans and maintains a strong dedication to 
-            the needs of the greater Boston community. 
-            <br /><br />
-            <h2>Culture</h2>
-            In 1992, the board promoted Vietnamese culture through food festivals. Today, HVA's annual Southeast Asian 
-            night is a cultural extravaganza which sells out each year. Additionally, the Harvard Vietnamese Dance & Drama 
-            Troupe (HVDT) was created as an opportunity for students to embrace Vietnamese culture through music and dance. 
-            In the past, HVA has also invited numerous artists to speak and perform on campus. In 2005, the board invited the 
-            poet-in-exile, Du Tu Le. In 2004, the board invited composer Pham Duy.
-            <br /><br />
-            <h2>Community</h2>
-            HVA maintains a strong commitment to building a warm community amongst its members. 
-            We are known on campus for our friendliness and are often seen as a "family." To promote cooperation and bonding, 
-            HVA hosts two annual study breaks each year - the Freshman study break and the Senior study break. 
-            These study breaks offer the new class a chance to get to know each other and offers the old class a chance to 
-            reminisce over a final project. Additionally, HVA  hosts an annual HVA retreat for all members to bond with one 
-            another. Past retreats have been picnicking at the Arnold Arboretum, apple picking in New Hampshire, and canoeing. 
-            We also have numerous social events throughout the year including movie nights, parties, and meals.
-            <br /><br />
-            <h2>Politics</h2>
-            While HVA has no official political affiliation, we host political/educational events to foster a greater 
-            understanding of the issues facing the Vietnamese and Vietnamese American community. In 2003, the board hosted a 
-            film series to discuss the works of Tran Van Thuy, a documentary filmmaker whose films are highly controversial for 
-            their critique of the Vietnamese Communist regime post-1975. The Co-President at that time, Mai Anh Huynh '04, 
-            stated that this "series of screenings is the first of its kind sponsored by the HVA." In 2006, the board 
-            commemorated April 30th for the first time by displaying information posters in Loker Commons and the Science Center 
-            for two consecutive weeks.
-            <br /><br />
-            <h2>Vision</h2>
-            In recent years, HVA has  modified its mission to incorporate Vietnamese American history and culture in addition 
-            to Vietnamese history and culture. We recognize the importance of understanding emerging narratives about the Vietnamese 
-            American experience and offer a means for the Harvard community to explore this culture. In 2005, the board hosted a film 
-            screening entitled, "Forging New Identities" where we viewed films such as Saigon, USA (2003) and speaker Quang Tran '05 
-            presented her senior thesis about the Vietnamese 1.5 generation.
-          </div>
-          </section>-->
-          <!--<div class="span4">
-            <h3>Secondary content</h3>
-            <a href = "#about">About</a><br>
-            <a href = "#classes">Related Classes</a><br>
-            <a href = "#constitution">Constitution</a><br>
-            <a href = "#dance">Dance Troupe</a><br>
-            <a href = "#language">Language Table</a><br>
-            <a href = "#meetings">Meetings</a><br>
-            <a href = "#membership">Membership</a><br>
-            <a href = "#seanight">SEA Night</a><br>
-            <a href = "#volunteer">Volunteer</a><br>
-            <a href = "#website">Website</a><br>
-          </div>-->
-
-          <ul class = "tabs">
+          <ul class = "tabs" data-tabs = "tabs">
             <li class = "active"><a href = "#about">About</a></li>
             <li><a href = "#classes">Classes</a></li>
             <li><a href = "#constitution">Constitution</a></li>
@@ -122,10 +62,27 @@
             <li><a href = "#volunteer">Volunteer</a></li>
             <li><a href = "#website">Site</a></li>
           </ul>
+          <div id = "my-tab-content" class = "tab-content">
+            <div class = "active tab-pane" id = "about"><h2>History &amp Purpose</h2></div>
+            <div class = "tab-pane" id = "classes">Classes
+            </div>
+            <div class = "tab-pane" id = "constitution">
+            </div>
+            <div class = "tab-pane" id = "dance">
+            </div>
+            <div class = "tab-pane" id = "language">
+            </div>
+            <div class = "tab-pane" id = "meetings">
+            </div>
+            <div class = "tab-pane" id = "membership">
+            </div>
+            <div class = "tab-pane" id = "seanight">
+            </div>
+            <div class = "tab-pane" id = "volunteer">
+            </div>
+            <div class = "tab-pane" id = "website">
+            </div>
           </div>
-
- 
-
       </div>
 
       <footer>
@@ -134,9 +91,14 @@
         The Harvard name and/or VERITAS shield are trademarks of the President and Fellows of Harvard College and are used by permission of Harvard University.</p>
       </footer>
 
+      <script>
+  $(function () {
+    $('.tabs').tabs()
+  })
+</script>
+
     </div> <!-- /container -->
 
   </body>
-  <script>
-  </script>
+  
 </html>
