--- a/Pages/index.html
+++ b/Pages/index.html
@@ -43,15 +43,14 @@
         </div>
       </div>
     </div>
-
     <div class="container">
 
       <!-- Main hero unit for a primary marketing message or call to action -->
-      <div class="hero-unit" id ="mainphoto">
+      <div class="hero-unit" id ="mainphoto" enableviewstate = true>
+      <img src="group.jpg" width = "800px" height= "420px" alt="HVA" />
         <h1>Harvard <br /> 
         Vietnamese Association</h1>
         <p>Fostering CULTURE-COMMUNITY-AWARENESS</p>
-        <p><a class="btn danger">Learn more &raquo;</a></p>
       </div>
 
       <!-- Example row of columns -->
@@ -63,7 +62,7 @@ The Harvard Vietnamese Association is dedicated to fostering an awareness of Vie
         </div>
         <div class="span8">
           <h2>News and Events</h2>
-           <p>The site is currently under renovation, but we will be including information about events here. </p>
+           <p>The site is currently under construction, but we will be including information about events here. </p>
           <p><a class="btn danger" href="events.html">View details &raquo;</a></p>
        </div>
       </div>
