--- a/Website/web/06content/about.html
+++ b/Website/web/06content/about.html
@@ -2,7 +2,7 @@
 <HEAD>
 <meta http-equiv="Content-Language" content="en-us">
 
-<TITLE>ABOUT HVA</TITLE>
+<TITLE>HVA | About</TITLE>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=windows-1252">
 <!-- ImageReady Preload Script (template182b.psd) -->
 <SCRIPT TYPE="text/javascript">
@@ -73,7 +73,7 @@ true;"
 				ONMOUSEOVER="window.status='about'; changeImages('about', 'images/about-over.gif', 'content_12', 'images/content_12-home_over.gif', 'content_13', 'images/content_13-home_over.gif', 'content_14', 'images/content_14-home_over.gif', 'b_links', 'images/b_links-home_over.gif'); return true;"
 				ONMOUSEOUT="window.status=''; changeImages('about', 'images/about.gif', 'content_12', 'images/content_12.gif', 'content_13', 'images/content_13.gif', 'content_14', 'images/content_14.gif', 'b_links', 'images/b_links.gif'); return true;">
 				<IMG NAME="about" SRC="images/about.gif" WIDTH=44 HEIGHT=12 BORDER=0 ALT="about"></A></TD>
-		<TD>
+		<!--<TD>
 			<A HREF="http://www.hcs.harvard.edu/~hva/06content/Portfolio/portfolio.html"
 				ONMOUSEOVER="window.status='portfolio'; changeImages('portfolio', 'images/portfolio-over.gif', 'content_12', 'images/content_12-home_over.gif', 'content_13', 'images/content_13-home_over.gif', 'content_14', 'images/content_14-home_over.gif', 'b_links', 'images/b_links-home_over.gif'); return true;"
 				ONMOUSEOUT="window.status=''; changeImages('portfolio', 'images/portfolio.gif', 'content_12', 'images/content_12.gif', 'content_13', 'images/content_13.gif', 'content_14', 'images/content_14.gif', 'b_links', 'images/b_links.gif'); return true;">
@@ -83,6 +83,7 @@ true;"
 				ONMOUSEOVER="window.status='contact'; changeImages('contact', 'images/contact-over.gif', 'content_12', 'images/content_12-home_over.gif', 'content_13', 'images/content_13-home_over.gif', 'content_14', 'images/content_14-home_over.gif', 'b_links', 'images/b_links-home_over.gif'); return true;"
 				ONMOUSEOUT="window.status=''; changeImages('contact', 'images/contact.gif', 'content_12', 'images/content_12.gif', 'content_13', 'images/content_13.gif', 'content_14', 'images/content_14.gif', 'b_links', 'images/b_links.gif'); return true;">
 				<IMG NAME="contact" SRC="images/contact.gif" WIDTH=54 HEIGHT=12 BORDER=0 ALT="contact"></A></TD>
+		    -->
 		<TD ROWSPAN=8>
 			<IMG SRC="images/content_08.gif" WIDTH=57 HEIGHT=590 ALT=""></TD>
 		<TD>
