--- a/Website/web/about.html
+++ b/Website/web/about.html
@@ -73,12 +73,12 @@ true;"
 				ONMOUSEOVER="window.status='about'; changeImages('about', 'images/about-over.gif', 'content_12', 'images/content_12-home_over.gif', 'content_13', 'images/content_13-home_over.gif', 'content_14', 'images/content_14-home_over.gif', 'b_links', 'images/b_links-home_over.gif'); return true;"
 				ONMOUSEOUT="window.status=''; changeImages('about', 'images/about.gif', 'content_12', 'images/content_12.gif', 'content_13', 'images/content_13.gif', 'content_14', 'images/content_14.gif', 'b_links', 'images/b_links.gif'); return true;">
 				<IMG NAME="about" SRC="images/about.gif" WIDTH=44 HEIGHT=12 BORDER=0 ALT="about"></A></TD>
-		<TD>
+		<!--<TD>
 			<A HREF="#"
 				ONMOUSEOVER="window.status='portfolio'; changeImages('portfolio', 'images/portfolio-over.gif', 'content_12', 'images/content_12-home_over.gif', 'content_13', 'images/content_13-home_over.gif', 'content_14', 'images/content_14-home_over.gif', 'b_links', 'images/b_links-home_over.gif'); return true;"
 				ONMOUSEOUT="window.status=''; changeImages('portfolio', 'images/portfolio.gif', 'content_12', 'images/content_12.gif', 'content_13', 'images/content_13.gif', 'content_14', 'images/content_14.gif', 'b_links', 'images/b_links.gif'); return true;">
 				<IMG NAME="portfolio" SRC="images/portfolio.gif" WIDTH=65 HEIGHT=12 BORDER=0 ALT="portfolio"></A></TD>
-		<TD COLSPAN=2>
+		<TD COLSPAN=2>-->
 			<A HREF="#"
 				ONMOUSEOVER="window.status='contact'; changeImages('contact', 'images/contact-over.gif', 'content_12', 'images/content_12-home_over.gif', 'content_13', 'images/content_13-home_over.gif', 'content_14', 'images/content_14-home_over.gif', 'b_links', 'images/b_links-home_over.gif'); return true;"
 				ONMOUSEOUT="window.status=''; changeImages('contact', 'images/contact.gif', 'content_12', 'images/content_12.gif', 'content_13', 'images/content_13.gif', 'content_14', 'images/content_14.gif', 'b_links', 'images/b_links.gif'); return true;">
