--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>HVA Contact</title>
+    <title>HVA | Contact</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -57,8 +57,8 @@
       Cambridge, MA 02138<br><br>
 
       <h2>Join Us!</h2><br>
-      Join our <a href = "https://lists.hcs.harvard.edu/mailman/listinfo/hva-list">official mailing list</a> for announcements & upcoming events.<br>
-      Join our <a href = "https://lists.hcs.harvard.edu/mailman/listinfo/hva-board">open list</a> for Vietnamese campus discussions.<br>
+      Join our <a href = "https://lists.hcs.harvard.edu/mailman/listinfo/hva-board">official mailing list</a> for announcements & upcoming events.<br>
+      Join our <a href = "https://lists.hcs.harvard.edu/mailman/listinfo/hva-list">open list</a> for Vietnamese campus discussions.<br>
       Join the Harvard Vietnamese official <a href = "https://www.facebook.com/groups/2200047691/">Facebook group</a>.
 
 </div>
